Yaml_files/4-pod_withconfigmap.yaml

---
apiVersion: v1
kind: Pod
metadata:
  name: configmap-ex-pod 

spec: 
  containers:
    - name: insta-pod-cont
      image: devopshubg333/batch16d:fb_httpd
