Yaml_files/2-clusterip-svc.yaml


---
apiVersion: v1
kind: Service
metadata:
   name: fb-cip-svc
   labels:
     app: facebook 

spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080 
      protocol: TCP

  selector:
    app: facebook
