Yaml_files/result-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: result
  labels:
    name: result-service
    app: voting-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    name: result-app-pod
    app: voting-app
