Yaml_files/voting-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: vote
  labels:
    name: voting-service
    app: voting-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    name: voting-app-pod
    app: voting-app
