Yaml_files/vote-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vote-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "vote.b16catsvsdogs.xyz"
    - "www.b16catsvsdogs.xyz"
    - "b16catsvsdogs.xyz"
  rules:
  - host: vote.b16catsvsdogs.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vote
            port:
              number: 80
  - host: www.b16catsvsdogs.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vote
            port:
              number: 80

  - host: b16catsvsdogs.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vote
            port:
              number: 80
